# gca-alpha

be/apigw/: .coverage  .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  validate_oauth.py
be/apigw/app/: main.py
be/apigw/app/api/v1/: router.py
be/apigw/app/api/v1/endpoints/: admin.py  api_keys.py  auth.py  health.py  metrics.py  oauth.py  rbac.py  weather.py
be/apigw/app/config/: __init__.py  jwt_config.py  logging.py  oauth_config.py  settings.py
be/apigw/app/core/: rbac.py
be/apigw/app/core/middleware/: __init__.py  metrics.py
be/apigw/app/gateway/: router.py  router_new.py
be/apigw/app/gateway/proxy/: __init__.py  http_client.py  load_balancer.py  service_discovery.py
be/apigw/app/gateway/routing/: __init__.py  engine.py  path_matcher.py
be/apigw/app/middleware/: api_key_middleware.py  auth.py  jwt_middleware.py
be/apigw/app/models/: service.py
be/apigw/app/services/: api_keys.py  oauth.py  registry.py  weather_service.py
be/apigw/app/utils/: helpers.py
be/apigw/config/: development.yaml  docker.yaml  gateway.yaml  production.yaml  services.yaml
be/apigw/docs/: API_KEY_IMPLEMENTATION_SUMMARY.md  api-key-management.md  architecture.md  codebase-review.md  deployment.md  implementation-roadmap.md  jwt-authentication-implementation.md  oauth2-implementation-summary.md  performance-optimization.md  rbac-implementation-guide.md  security-recommendations.md  testing-strategy.md  weather-service-integration.md
be/apigw/requirements/: base.txt  development.txt  optional.txt  production.txt
be/apigw/scripts/: .coverage  run_tests.py  start.sh  test_jwt_auth.py  test_weather.py  validate_api_keys.py
be/apigw/tests/: README.md  test_rbac_integration.py
be/apigw/tests/fixtures/: __init__.py
be/apigw/tests/integration/: test_api_keys.py  test_config.py  test_gateway.py  test_oauth_integration.py  test_service_registry.py
be/apigw/tests/unit/: test_config.py  test_helpers.py  test_models.py  test_oauth_service.py  test_service_registry.py
